Fix blob line number slightly enlarges on Android Chrome
When a file's line count exceeds certain amount (probably 130 or so?)
the line number rows slightly increases its vertical size and causes
misalign to a text line on its right.

This happens on Samsung Galaxy Tab S9 FE (Android 14), and does not
happen on Motorola Razr 40 Ultra (Android 15).

I still don't know which factor plays, but this patch fixes the bug.

--- a/static/repo-blob-ref.css
+++ b/static/repo-blob-ref.css
@@ -24,6 +24,10 @@
 	text-align: end;
 }
 
+.blob-preview--line-number-list > li {
+	display: block;
+}
+
 .blob-preview--line-number {
 	padding: 0;
 	margin: 0;
